fix alignment for small with errors

--- a/app/assets/stylesheets/cfa_ui_components/components/forms.css
+++ b/app/assets/stylesheets/cfa_ui_components/components/forms.css
@@ -26,6 +26,7 @@ select {
 .radio_button_item {
     @apply flex items-center gap-cfa-sm;
     label { margin-bottom: 0; }
+    .field_with_errors { display: contents; }
 }
 
 .checkbox_item {
